--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clipboard": "^2.0.11",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.2.2",
+    "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "moment": "^2.29.3",
     "nprogress": "^0.2.0",
