--- a/.env.production
+++ b/.env.production
@@ -5,5 +5,5 @@ VITE_DEBUG=true
 # 站点名称
 VITE_SITE_NAME=pc端模板
 
-# 远程服务器api接口(生产实际是否使用该配置请 查看src/config/Configs.js getBaseUrl() 逻辑决定)
+# 远程服务器api接口(生产实际是否使用该配置请 查看src/config/Configs.ts getBaseUrl() 逻辑决定)
 VITE_API_HOST=https://api.test.com/
