--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@vant/use": "^1.5.0",
     "axios": "^1.3.4",
     "clipboard": "^2.0.11",
-    "crypto-js": "^4.1.1",
     "element-plus": "^2.2.36",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
@@ -28,6 +27,8 @@
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/lodash": "^4.14.191",
+    "@types/qs": "^6.9.7",
     "@vitejs/plugin-legacy": "^4.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.14",
@@ -36,7 +37,9 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "terser": "^5.16.6",
+    "typescript": "^4.9.5",
     "vite": "^4.1.4",
-    "vite-plugin-css-export": "^2.0.0"
+    "vite-plugin-css-export": "^2.0.0",
+    "vue-tsc": "^1.2.0"
   }
 }
